[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/TownHall/townHall.png" type="Texture" id=1]
[ext_resource path="res://Scenes/TownHall/townhall.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 1, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 124.016

[node name="TownHall" type="StaticBody2D" groups=["townhall"]]
collision_layer = 8
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Bar" type="ProgressBar" parent="."]
margin_left = -23.0
margin_top = -74.0
margin_right = 28.0
margin_bottom = -60.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 80.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -73, -2, -44, -33, 2, -45, 53, -32, 67, -15, 72, -2, 55, 44, 0, 54, -48, 43 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
